# BiliAnalyzer

./: .gitattributes  .gitignore  BiliAnalyzer.spec  README.md  TODO  TODO.md  main.py  pyproject.toml  requirements.txt
bilianalyzer/: analyze.py  comments.py  config.py  convert.py  converter.py  download.py  exceptions.py  log.py  main.py  pipes.py  signals.py  statistics.py  stopwords.json  storage.py
bilianalyzer/docs/: about.html  tutorial.html
bilianalyzer/scripts/: build.ps1  ui2py.ps1
bilianalyzer/ui/: about_window.ui  config.ui  config_window.ui  main.ui  main_window.ui  tutorial.ui  ui_about.py  ui_config.py  ui_main.py  ui_tutorial.py
design/: config.psd  download.psd  info.psd  main.psd  tutorial.psd
scripts/: build.ps1  relocate.py  ui2py.ps1
src/: analyze.py  analyzer.py  auth.py  config.py  constants.py  data.py  database.py  downloader.py  fetch.py  main.py  progress.py  utils.py
src/bilianalyzer/: __main__.py  analyze.py  auth.py  utils.py
src/bilianalyzer/analyze/: comments.py
src/bilianalyzer/commands/: analyze_commands.py  auth_commands.py  fetch_commands.py
src/bilianalyzer/fetch/: comments.py  fetcher.py
